# speech-summarization

./: .gitignore  Dockerfile  LICENSE  pyproject.toml
.github/workflows/: python-app.yml
audio_summarization/: .audio2text.py.swp  audio2text.py  main.py  split_text.py  summarize_text.py
data/: summarized_text.txt
scripts/: clear.sh  install_dependencies.sh  invoke.sh  invoke_split_text.sh  test_invoke_speech2text.sh  test_invoke_split_text.sh
speech_summarization/: cleanse_text.py  get_path.py  group_text.py  merge_text.py  pipeline.py  refine_output.py  speech2text.py  split_text.py  summarize_text.py
tests/: test_cleanse_text.py  test_group_text.py  test_merge_text.py  test_path.py  test_refine_output.py  test_speech2text.py  test_split_text.py  test_summarize_text.py
tests/data/input/: test.aif
